--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -1,21 +1,20 @@
 .wp-block-themeisle-blocks-accordion {
+  .wp-block-themeisle-blocks-accordion-block-tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-	.wp-block-themeisle-blocks-accordion-block-tabs {
-		display: flex;
-		align-items: center;
-		justify-content: center;
+    .block-editor-inner-blocks {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
 
-		.block-editor-inner-blocks {
-			width: 100%;
-			display: flex;
-			flex-direction: column;
-				
-			.block-editor-block-list__layout {
-				.block-editor-block-list__block {
-					margin: 0px;
-					@import './tab/style.scss';
-				}
-			}
-		}
-	}	
+      .block-editor-block-list__layout {
+        .block-editor-block-list__block {
+          margin: 0px;
+          @import "./tab/style.scss";
+        }
+      }
+    }
+  }
 }
