--- a/src/blocks/accordion/tab/style.scss
+++ b/src/blocks/accordion/tab/style.scss
@@ -7,6 +7,7 @@ $toggler-background-color: rgb(255, 255, 255);
 
   margin-bottom: 5px;
   border: solid 2px black;
+  padding: 4px;
 
   transition: all 0.1s ease-in;
 
