--- a/src/blocks/accordion/tab/style.scss
+++ b/src/blocks/accordion/tab/style.scss
@@ -106,6 +106,8 @@ $toggler-background-color: rgb(255, 255, 255);
 
   .wp-block-themeisle-blocks-accordion-block-tab-content {
     padding: 0 13px;
+    padding-top: 3px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
     background-color: transparent;
     max-height: 0;
     opacity: 0;
