Set 'inline-block' for tablet mode

--- a/src/blocks/button-group/style.scss
+++ b/src/blocks/button-group/style.scss
@@ -52,7 +52,7 @@
 	.wp-block-themeisle-blocks-button-group {
 		&.collapse-tablet {
 			.wp-block-themeisle-blocks-button {
-				display: block;
+				display: inline-block;
 			}
 		}
 	}
