Disable Search button on inspector

--- a/src/blocks/leaflet-map/editor.scss
+++ b/src/blocks/leaflet-map/editor.scss
@@ -159,6 +159,8 @@
 
   .wp-block-themeisle-blocks-map-overview-content p {
     font-size: 12px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .wp-block-themeisle-blocks-map-overview-delete {
