--- a/src/blocks/leaflet-map/style.scss
+++ b/src/blocks/leaflet-map/style.scss
@@ -10,6 +10,8 @@
 
   .wp-block-themeisle-blocks-map-overview-content p {
     font-size: 12px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .wp-block-themeisle-blocks-map-overview-delete {
