--- a/src/blocks/leaflet-map/editor.scss
+++ b/src/blocks/leaflet-map/editor.scss
@@ -18,6 +18,7 @@
 }
 
 .wp-block-themeisle-blocks-leaflet-map {
+
   &.components-placeholder {
     padding: 40px 20px;
 
@@ -53,9 +54,26 @@
     }
   }
 
-  &.is-selecting-marker * {
+  &.is-selecting-location * {
     cursor: crosshair;
+
+    .wp-block-themeisle-blocks-leaflet-map-marker-button {
+      background-color: #E7BB41;
+
+      * {
+        cursor: pointer;
+      }
+
+      .dashicons {
+        &:before {
+          content: "\f109";
+        }
+        color: #fff;
+      }
+    }
   }
+
+
 }
 
 .wp-block-themeisle-blocks-leaflet-map-marker-button {
