fix style & add new dependancy

--- a/src/blocks/leaflet-map/style.scss
+++ b/src/blocks/leaflet-map/style.scss
@@ -1,16 +1,20 @@
-.wp-block-themeisle-blocks-map-overview {
-	h6.wp-block-themeisle-blocks-map-overview-title {
+.wp-block-themeisle-leaflet-blocks-map {
+	margin: 20px 0;
+}
+
+.wp-block-themeisle-blocks-leaflet-map-overview {
+	h6.wp-block-themeisle-blocks-leaflet-map-overview-title {
 		font-size: 14px;
 		margin: 10px 0;
 	}
 
-	.wp-block-themeisle-blocks-map-overview-content p {
+	.wp-block-themeisle-blocks-leaflet-map-overview-content p {
 		font-size: 12px;
 		margin-top: 0px;
 		margin-bottom: 0px;
 	}
 
-	.wp-block-themeisle-blocks-map-overview-delete {
+	.wp-block-themeisle-blocks-leaflet-map-overview-delete {
 		cursor: pointer;
 		margin-top: 8px;
 	}
