--- a/src/blocks/slider/editor.scss
+++ b/src/blocks/slider/editor.scss
@@ -80,6 +80,7 @@
 		.block-editor-rich-text__editable {
 			position: absolute;
 			bottom: 0;
+			margin-bottom: 0px;
 			width: 100%;
 			max-height: 100%;
 			overflow-y: auto;
@@ -96,6 +97,7 @@
 			figcaption {
 				white-space: pre-wrap;
 				bottom: 0;
+				margin-bottom: 0px;
 				width: 100%;
 				max-height: 100%;
 				overflow: auto;
