--- a/src/blocks/slider/style.scss
+++ b/src/blocks/slider/style.scss
@@ -16,6 +16,7 @@
 		figcaption {
 			position: absolute;
 			bottom: 0;
+			margin-bottom: 0px;
 			width: 100%;
 			max-height: 100%;
 			overflow-y: auto;
