--- a/src/blocks/accordion/style.scss
+++ b/src/blocks/accordion/style.scss
@@ -3,13 +3,9 @@
 
 	.wp-block-themeisle-blocks-accordion-item {
 		.wp-block-themeisle-blocks-accordion-item__title {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
 			color: #1e1e1e;
 			background: #ffffff;
 			border: 1px solid #d5dadf;
-			padding: 18px 24px;
 			list-style: none;
 			cursor: pointer;
 			user-select: none;
@@ -23,18 +19,25 @@
 				filter: brightness( 0.95 );
 			}
 
-			&::after {
-				content: '';
-				border-right: 2px solid #1e1e1e;
-				border-bottom: 2px solid #1e1e1e;
-				width: 8px;
-				height: 8px;
-				transform: rotate(45deg) translate(-25%, 0%);
-			}
-
 			&::-webkit-details-marker,
 			&::marker {
 				display: none;
+			}
+
+			> div {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				padding: 18px 24px;
+
+				&::after {
+					content: '';
+					border-right: 2px solid #1e1e1e;
+					border-bottom: 2px solid #1e1e1e;
+					width: 8px;
+					height: 8px;
+					transform: rotate(45deg) translate(-25%, 0%);
+				}
 			}
 		}
 
@@ -47,8 +50,10 @@
 
 		&[open] {
 			.wp-block-themeisle-blocks-accordion-item__title {
-				&::after {
-					transform: rotate(225deg) translate(0%, -45%);
+				> div {
+					&::after {
+						transform: rotate(225deg) translate(0%, -45%);
+					}
 				}
 			}
 		}
