--- a/src/blocks/button-group/editor.scss
+++ b/src/blocks/button-group/editor.scss
@@ -1,14 +1,14 @@
 .wp-block-themeisle-blocks-button-group {
 	&.align-left {
-		text-align: left;
+		justify-content: flex-start;
 	}
 
 	&.align-center {
-		text-align: center;
+		justify-content: center;
 	}
 
 	&.align-right {
-		text-align: right;
+		justify-content: flex-end;
 	}
 
 	&.collapse {
