fix toolbar style

--- a/src/components/style-switcher-control/editor.scss
+++ b/src/components/style-switcher-control/editor.scss
@@ -12,6 +12,8 @@
 		cursor: pointer;
 		overflow: hidden;
 		border-radius: 4px;
+		min-width: 100px;
+		min-height: 100px;
 
 		&.is-active {
 			box-shadow: 0 0 0 2px #000;
