Initial commit for Revive Block

--- a/src/blocks/advanced-heading/editor.scss
+++ b/src/blocks/advanced-heading/editor.scss
@@ -47,5 +47,6 @@
 .wp-themesiel-blocks-advanced-heading-popover-content {
 	.components-popover__content {
 		padding: 20px;
+		width: 300px;
 	}
 }
