--- a/src/components/sizing-control/editor.scss
+++ b/src/components/sizing-control/editor.scss
@@ -24,6 +24,10 @@
 					background-color: #e6e9ec;
 					cursor: not-allowed;
 				}
+
+				.dashicon {
+					margin: 2px;
+				}
 			}
 
 			.wp-block-themeisle-blocks-sizing-control-item-label {
