--- a/src/components/control-panel-control/editor.scss
+++ b/src/components/control-panel-control/editor.scss
@@ -30,6 +30,10 @@
 					&.is-active {
 						color: var(--wp-admin-theme-color);
 					}
+
+					.dashicon {
+						margin: 2px;
+					}
 				}
 			}
 		}
