--- a/src/components/responsive-control/editor.scss
+++ b/src/components/responsive-control/editor.scss
@@ -17,17 +17,8 @@
 				height: 28px;
 				border: 1px solid #555d66;
 
-				&.is-primary {
-					z-index: 0;
-
-					&:hover {
-						background: #007eb1;
-						border-color: #006a95 #00648c #00648c;
-						box-shadow: inset 0 -1px 0 #00648c;
-						color: #fff;
-						text-decoration: none;
-						text-shadow: 0 -1px 1px #005d82,1px 0 1px #005d82,0 1px 1px #005d82,-1px 0 1px #005d82;
-					}
+				.dashicon {
+					margin: 2px;
 				}
 			}
 		}
