--- a/src/blocks/review/style.scss
+++ b/src/blocks/review/style.scss
@@ -4,6 +4,7 @@
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: 0px 0px;
 	grid-template-areas: 'header header header' 'left left right' 'footer footer footer';
+	margin-bottom: 10px;
 
 	.wp-block-themeisle-blocks-review__header {
 		padding: 20px 30px;
@@ -131,6 +132,7 @@
 					span {
 						padding-left: 10px;
 						font-size: 13px;
+						word-break: keep-all;
 					}
 				}
 			}
