--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -1,4 +1,5 @@
 .wp-block-themeisle-blocks-tabs {
+
 	.wp-block-themeisle-blocks-tabs-headers {
 		display: flex;
 		flex-direction: row;
@@ -57,6 +58,42 @@
 					margin-bottom: 0px;
 				}
 			}
+		}
+	}
+}
+
+.wp-block-themeisle-blocks-tabs-inspector-tab-option {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	padding: 5px 10px;
+	border: 1px solid #bbb;
+	border-radius: 10px;
+	margin-bottom: 8px;
+
+	.wp-block-themeisle-blocks-tabs-inspector-tab-option__name {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		width: 80%;
+		display: flex;
+		flex-direction: row;
+
+		p {
+			margin: 0px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+
+	}
+
+	.wp-block-themeisle-blocks-tabs-inspector-tab-option__actions {
+		display: flex;
+		flex-direction: row;
+
+		&::before {
+			content: '|';
+			margin: 0px 5px;
 		}
 	}
 }
