Add sortable tabs in inspector

--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -70,6 +70,7 @@
 	border: 1px solid #bbb;
 	border-radius: 10px;
 	margin-bottom: 8px;
+	cursor: move;
 
 	.wp-block-themeisle-blocks-tabs-inspector-tab-option__name {
 		overflow: hidden;
