--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -11,6 +11,7 @@
 
 		.wp-block-themeisle-blocks-tabs-header {
 			padding: 5px 10px;
+			white-space: nowrap;
 
 			&.active {
 				border: 3px solid black;
