--- a/src/blocks/tabs/item/editor.scss
+++ b/src/blocks/tabs/item/editor.scss
@@ -1,7 +1,8 @@
 .wp-block-themeisle-blocks-tabs-item {
+	border-color: inherit;
 	.wp-block-themeisle-blocks-tabs-item-header {
 		width: 100%;
-		border: 3px solid black;
+		border-style: solid;
 		padding: 5px 10px;
 
 		@media (min-width: 800px) {
@@ -12,7 +13,8 @@
 	.wp-block-themeisle-blocks-tabs-item-content {
 		border-top: 0px;
 		width: 100%;
-		border: 3px solid black;
+		border-style: solid;
+		border-color: inherit;
 		padding: 10px;
 		display: none;
 		border-top: 0px;
