--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -15,6 +15,10 @@
 			padding: 5px 10px;
 			white-space: nowrap;
 
+			svg {
+				fill: gray;
+			}
+
 			&.active {
 				position: relative;
 				border-color: inherit;
