--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -1,5 +1,5 @@
 .wp-block-themeisle-blocks-tabs {
-	border-color: aqua;
+	border-color: black;
 
 	.wp-block-themeisle-blocks-tabs-headers {
 		display: flex;
