Fix mobile version

--- a/src/blocks/tabs/item/editor.scss
+++ b/src/blocks/tabs/item/editor.scss
@@ -1,5 +1,18 @@
 .wp-block-themeisle-blocks-tabs-item {
 	border-color: inherit;
+
+	&:not(:last-child) {
+		.wp-block-themeisle-blocks-tabs-item-header {
+			border-bottom-style: none;
+		}
+
+		@media (max-width: 800px) {
+			.wp-block-themeisle-blocks-tabs-item-content {
+				border-bottom-style: none;
+			}
+		}
+	}
+
 	.wp-block-themeisle-blocks-tabs-item-header {
 		width: 100%;
 		border-style: solid;
@@ -7,6 +20,10 @@
 
 		@media (min-width: 800px) {
 			display: none;
+		}
+
+		&.active {
+			border-bottom-style: none;
 		}
 	}
 
