--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -14,6 +14,7 @@
 		.wp-block-themeisle-blocks-tabs-header {
 			padding: 5px 10px;
 			white-space: nowrap;
+			cursor: pointer;
 
 			svg {
 				fill: gray;
