Replace Add Tab Icon and fix Firefox bug

--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -127,3 +127,9 @@
 	justify-content: center;
 	width: 100%;
 }
+
+.wp-block-themeisle-blocks-tabs-toolbar-mover {
+	svg {
+		max-width: 24px;
+	}
+}
