--- a/src/blocks/tabs/item/editor.scss
+++ b/src/blocks/tabs/item/editor.scss
@@ -17,6 +17,7 @@
 		width: 100%;
 		border-style: solid;
 		padding: 5px 10px;
+		cursor: pointer;
 
 		@media (min-width: 800px) {
 			display: none;
