--- a/src/blocks/tabs/item/style.scss
+++ b/src/blocks/tabs/item/style.scss
@@ -16,6 +16,7 @@
 		width: 100%;
 		border: 3px solid black;
 		padding: 5px 10px;
+		cursor: pointer;
 
 		@media (min-width: 800px) {
 			display: none;
