--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -89,17 +89,42 @@
 .wp-block-themeisle-blocks-tabs-inspector-tab-option {
 	display: flex;
 	border: 1px solid #d5dadf;
-	cursor: move;
 	margin: 10px 0;
+	background-color: white;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 
 	&:hover {
 		border-color: #a4afb7;
 	}
 
+	.wp-block-themeisle-blocks-tabs-inspector-tab-option__drag {
+		display: flex;
+		justify-content: center;
+		align-self: center;
+		flex-basis: 20%;
+		padding: 15px 0;
+		cursor: move;
+
+		&:focus {
+			box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
+		}
+
+		span {
+			display: flex;
+			align-self: center;
+			width: 18px;
+			height: 11px;
+			background: linear-gradient(180deg,#000,#000 20%,#fff 0,#fff 40%,#000 0,#000 60%,#fff 0,#fff 80%,#000 0,#000);
+		}
+	}
+
 	.wp-block-themeisle-blocks-tabs-inspector-tab-option__name {
 		overflow: hidden;
 		flex-basis: 80%;
-		padding: 9px 15px;
+		padding: 9px 10px;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
