Add Edit button on tab constrols

--- a/src/blocks/tabs/group/editor.scss
+++ b/src/blocks/tabs/group/editor.scss
@@ -160,7 +160,7 @@
 	width: 100%;
 }
 
-.wp-block-themeisle-blocks-tabs-toolbar-mover {
+.wp-block-themeisle-blocks-tabs-toolbar-edit, .wp-block-themeisle-blocks-tabs-toolbar-mover  {
 	svg {
 		max-width: 24px;
 	}
