Fix accordion border style for children

--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -45,16 +45,19 @@
 	&:not( .is-narrow-gap ):not( .is-wide-gap ):not( .is-wider-gap ) {
 		> .block-editor-inner-blocks {
 			> .block-editor-block-list__layout {
-				> .block-editor-block-list__block {
-					&:not( :first-child ) {
-						.wp-block-themeisle-blocks-accordion-item__title {
-							border-top: none;
+					.block-editor-block-list__block {
+						&:not( :first-child ) > {
+							div:not(.wp-block-themeisle-blocks-accordion) > {
+								.wp-block-themeisle-blocks-accordion-item__title {
+									border-top: none;
+								}
+							}
 						}
 					}
 				}
 			}
 		}
-	}
+
 
 	&.is-narrow-gap {
 		> .block-editor-inner-blocks {
