--- a/src/blocks/review-comparison/style.scss
+++ b/src/blocks/review-comparison/style.scss
@@ -83,7 +83,8 @@
 				display: flex;
 				flex-direction: column;
 
-				span {
+				span,
+				a {
 					font-size: .8em;
 					font-weight: 600;
 					padding: 8px 12px;
