--- a/src/blocks/review-comparison/style.scss
+++ b/src/blocks/review-comparison/style.scss
@@ -6,7 +6,10 @@
 	thead {
 		tr {
 			th {
+				border-top: 0;
 				border-bottom: 1px solid #dddddd;
+				border-left: 0;
+				border-right: 0;
 			}
 
 			td {
@@ -15,7 +18,6 @@
 				border-style: solid;
 				border-width: 1px 0 1px 1px;
 				border-color: #dddddd;
-				color: #000000;
 
 				&:first-child {
 					border-width: 1px 1px 0 1px;
@@ -45,7 +47,6 @@
 			border-style: solid;
 			border-width: 0 0 1px 1px;;
 			border-color: #dddddd;
-			color: #000000;
 
 			del {
 				color: #A2A2A2;
@@ -106,9 +107,5 @@
 				border-width: 0 1px 1px 1px;
 			}
 		}
-	}
-
-	tr {
-		background-color: #ffffff;
 	}
 }
