Add Visibility by User Roles

--- a/src/components/panel-tab/editor.scss
+++ b/src/components/panel-tab/editor.scss
@@ -42,5 +42,12 @@
         border: 1px solid #d5dadf;
         border-top: none;
         padding: 10px 15px;
+
+        .components-select-control {
+            label {
+                overflow: visible;
+                white-space: normal;
+            }
+        }
     }
 }
