Add DateTime Range Condition

--- a/src/components/panel-tab/editor.scss
+++ b/src/components/panel-tab/editor.scss
@@ -51,6 +51,16 @@
 
         .components-base-control {
             margin: 12px 0;
+
+            .components-dropdown {
+                width: 100%;
+
+                .components-button {
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                }
+            }
         }
     }
 }
