Add dynamic css

--- a/src/blocks/business-hours/editor.scss
+++ b/src/blocks/business-hours/editor.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	padding: 15px;
 
 	.wp-block-themeisle-blocks-business-hours-title {
 		text-align: center;
@@ -12,5 +13,6 @@
 		display: flex;
 		flex-direction: column;
 		width: 400px;
+		padding: 10px;
 	}
 }
