Add Recurring Time to Block Conditions

--- a/src/components/panel-tab/editor.scss
+++ b/src/components/panel-tab/editor.scss
@@ -61,6 +61,14 @@
 					width: 100%;
 				}
 			}
+
+			.components-datetime__time-field-hours-input {
+				min-width: 60px;
+			}
+
+			.components-datetime__timezone {
+				display: inline-block;
+			}
 		}
 	}
 }
