--- a/src/blocks/review-comparison/style.scss
+++ b/src/blocks/review-comparison/style.scss
@@ -1,5 +1,6 @@
 .wp-block-themeisle-blocks-review-comparison {
-	table-layout: fixed;
+	display: block;
+	overflow: auto;
 	border-spacing: 0;
 	margin: 20px 0;
 
@@ -10,6 +11,7 @@
 				border-bottom: 1px solid #dddddd;
 				border-left: 0;
 				border-right: 0;
+				min-width: 150px;
 			}
 
 			td {
@@ -18,6 +20,7 @@
 				border-style: solid;
 				border-width: 1px 0 1px 1px;
 				border-color: #dddddd;
+				min-width: 150px;
 
 				&:first-child {
 					border-width: 1px 1px 0 1px;
@@ -41,12 +44,14 @@
 			border-style: solid;
 			border-color: #dddddd;
 			text-align: left;
+			min-width: 150px;
 		}
 
 		td {
 			border-style: solid;
 			border-width: 0 0 1px 1px;;
 			border-color: #dddddd;
+			min-width: 150px;
 
 			del {
 				color: #A2A2A2;
